@@ -1,5 +1,6 @@
 * 1.9.2
 	* New features:
+		- Do not allow flushdb when replication is in use(2015-11-16)
 		- Provide server side flushdb(2015-09-17)
 		- The slave will flush db when receive copy_begin(2015-07-28)
 	* Incompatible changes:
